# bubble_bouncing

./: .gitignore  Oseen_wake.ipynb  README.md  base.py  bounce.ipynb  bounce.py  bounce_simulator.py  bouncing_tilted.py  environment.yaml  main.py  oneFile.py  params.py  pyproject.toml  requirements.txt  rotate_vectors.ipynb  save_state.ipynb  simulate.py  test.py  units.py  utils.py
.old/: oneFile.py
.old/fem/: _bbfem.py
bubble/: __init__.py  bubble.py  forces.py  params.py
bubble_bouncing/: __init__.py  bounce_simulator.py  cli.py  cli_vis.py  config.py  utils.py  visualize.py
bubble_bouncing/bubble/: __init__.py  bubble.py  forces.py  params.py  readme.md  scene.py  vector_rotation.py
bubble_bouncing/simulation/: base.py  units.py
fem/: gen_square_mesh.py
notebooks/: Oseen_wake.ipynb  bubble_states.ipynb  live_jupyter_scene.ipynb  rotate_vectors.ipynb  slow_closeup.ipynb  visualize.ipynb
simulation/: __init__.py  base.py  bubble_data.ipynb  dataio.py
test/: development.ipynb
tests/: test.py
