[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bubble_bouncing"
version = "0.1.0"
description = "Bubble bouncing simulation software."
authors = [{ name = "Zhengyang Liu", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

[project.urls]
Homepage = "https://github.com/zloverty/bubble_bouncing"

[project.scripts]
bcsim = "bubble_bouncing.cli:main"

[tool.setuptools]
packages = ["bubble_bouncing"]