[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bubble_bouncing"
version = "0.1.3"
description = "Bubble bouncing simulation software."
authors = [{ name = "Zhengyang Liu", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

[project.urls]
Homepage = "https://github.com/zloverty/bubble_bouncing"

[project.scripts]
bcsim = "bubble_bouncing.cli:main"
view_traj = "bubble_bouncing.cli_vis:view_traj"
view_morphology = "bubble_bouncing.cli_vis:view_morphology"
view_oseen = "bubble_bouncing.cli_vis:view_oseen"

[tool.setuptools]
packages = ["bubble_bouncing"]