[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bubble_bouncing"
version = "0.2.0"
description = "Bubble bouncing simulation software."
authors = [{ name = "Zhengyang Liu", email = "liuzy19911112@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "numpy",
    "h5py",
    "pyyaml",
    "healpy",
    "scipy"
]

[project.urls]
Homepage = "https://github.com/zloverty/bubble_bouncing"

[project.scripts]
bcsim = "bubble_bouncing.cli:main"

[tool.setuptools]
packages = ["bubble_bouncing"]